@@ -10,6 +10,7 @@ Changelog for 1.3.36
 * Fixed invoices rounding and printing differently (Giovanni B)
 * Deleted broken pricematrix check on existing rows in POS (Chris T)
 * Fixing manually entered tax amounts ignored printing invoice (Chris T, 864)
+* Fixing deleting gl draft via gl screen fails (Chris T, 871)
 
 Chris T is Chris Travers
 Nick P is Nick Prater
